# mp4-edit

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  cliff.toml
.github/workflows/: release.yml  rust.yml
examples/: extract_leaf_atoms.rs  mp4copy.rs  mp4dump.rs  mp4dump_tui.rs
src/: atom.rs  chapter_track_builder.rs  chunk_offset_builder.rs  lib.rs  parser.rs  reader.rs  sample_size_prediction.rs  writer.rs
src/atom/: atom_ref.rs  chpl.rs  container.rs  dref.rs  elst.rs  fourcc.rs  free.rs  ftyp.rs  gmhd.rs  hdlr.rs  ilst.rs  iter.rs  leaf.rs  mdhd.rs  meta.rs  mvhd.rs  sbgp.rs  sgpd.rs  smhd.rs  stco_co64.rs  stsc.rs  stsd.rs  stsz.rs  stts.rs  test_utils.rs  tkhd.rs  tref.rs  util.rs
src/atom/container/: edts.rs  gmhd.rs  mdia.rs  meta.rs  minf.rs  moov.rs  stbl.rs  trak.rs  udta.rs
src/atom/leaf/: chpl.rs  dref.rs  elst.rs  free.rs  ftyp.rs  gmhd.rs  gmin.rs  hdlr.rs  ilst.rs  mdhd.rs  mvhd.rs  sbgp.rs  sgpd.rs  smhd.rs  stco_co64.rs  stsc.rs  stsd.rs  stsz.rs  stts.rs  text.rs  tkhd.rs  tref.rs
src/atom/leaf/stsd/: audio.rs  extension.rs  mp4a.rs  text.rs  tx3g.rs
src/atom/leaf/stsd/extension/: audio_specific_config.rs  btrt.rs  esds.rs
src/atom/stsd/: btrt.rs  esds.rs  extension.rs
src/atom/stsd/extension/: audio_specific_config.rs
src/atom/util/: async_sync_bridge.rs  debug.rs  fourcc.rs  parser.rs  range.rs  serializer.rs  time.rs
tests/: examples_test.rs
