[package]
name = "mp4-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
crossterm = "0.27"
derive_more = { version = "2.0.1", features = ["full"] }
futures-io = "0.3"
futures-util = { version = "0.3", features = ["io"] }
mp4parse = "0.17.0"
ratatui = "0.28"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
