[package]
name = "mp4-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-utils = ["dep:tokio"]

[dependencies]
anyhow = "1.0.98"
bon = "3.6.5"
derive_more = { version = "2.0.1", features = ["full"] }
either = "1.15.0"
futures-io = "0.3"
futures-util = { version = "0.3", features = ["io"] }
rangemap = "1.7.0"
thiserror = "2.0.12"
winnow = "0.7.13"

[dev-dependencies]
# examples
aes = "0.8.4"
cbc = "0.1.2"
progress_bar = { version = "1.2.1", features = ["logger"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
# examples & tests
hex = "0.4.3"
# tests
escargot = "0.5.15"
mp4-edit = { path = ".", features = ["test-utils"] }
tempfile = "3.23.0"
sha2 = "0.10.9"

[profile.dev.package]
